# InterHospital-Communication-Using-Dual-layer-Encryption

./: .replit  README.md  app.py  main.py  pyproject.toml  replit.md  test_aes_encryption.py  test_aes_integration.py  test_system.py
.streamlit/: config.toml
attached_assets/: Pasted-I-want-you-to-build-a-complete-full-stack-web-application-based-on-the-following-research-project--1763363934920_1763363934921.txt
pages/: analytics.py  chatbot.py  dicom_viewer.py  encrypt_embed.py  extract_decrypt.py  home.py
utils/: dna_encryption.py  lsb_steganography.py  metrics.py
